--- a/src/Views/Voogd/Create.cshtml
+++ b/src/Views/Voogd/Create.cshtml
@@ -23,9 +23,9 @@
                 <span asp-validation-for="Achternaam" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Client"></label>
-                <select asp-for="Client" asp-items='@(new SelectList((IEnumerable<Client>)ViewData["Clienten"], "Id", "Voornaam"))'></select>
-                <span asp-validation-for="Client" class="text-danger"></span>
+                <label asp-for="ClientId"></label>
+                <select asp-for="ClientId" asp-items='@(new SelectList((IEnumerable<Client>)ViewData["Clienten"], "Id", "Voornaam"))'></select>
+                <span asp-validation-for="ClientId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
