--- a/src/Views/Voogd/Edit.cshtml
+++ b/src/Views/Voogd/Edit.cshtml
@@ -23,6 +23,11 @@
                 <input asp-for="Achternaam" class="form-control" />
                 <span asp-validation-for="Achternaam" class="text-danger"></span>
             </div>
+             <div class="form-group">
+                <label asp-for="ClientId"></label>
+                <select asp-for="ClientId" asp-items='@(new SelectList((IEnumerable<Client>)ViewData["Clienten"], "Id", "Voornaam"))'></select>
+                <span asp-validation-for="ClientId" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
