--- a/src/Views/Aanmelding/Details.cshtml
+++ b/src/Views/Aanmelding/Details.cshtml
@@ -61,6 +61,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.AanmeldingId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Hulpverlener" asp-action="Aanmelding">Back to List</a>
 </div>
