--- a/src/Views/Hulpverlener/Aanmelding.cshtml
+++ b/src/Views/Hulpverlener/Aanmelding.cshtml
@@ -16,9 +16,6 @@
                 @Html.DisplayNameFor(model => model.Achternaam)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.BSN)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
@@ -33,7 +30,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.NaamVoogd)
             </th>
-            <th></th>
+            <th>
+                @Html.DisplayNameFor(model => model.EmailVoogd)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TelefoonVoogd)
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -44,9 +46,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Achternaam)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BSN)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
@@ -64,9 +63,14 @@
                 @Html.DisplayFor(modelItem => item.NaamVoogd)
             </td>
             <td>
-                <a asp-controller="Aanmelding" asp-action="Edit" asp-route-id="@item.AanmeldingId">Edit</a> |
-                <a asp-controller="Aanmelding" asp-action="Details" asp-route-id="@item.AanmeldingId">Details</a> |
-                <a asp-controller="Aanmelding" asp-action="Delete" asp-route-id="@item.AanmeldingId">Delete</a>
+                @Html.DisplayFor(modelItem => item.EmailVoogd)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TelefoonVoogd)
+            </td>
+            <td>
+                <a asp-controller="Hulpverlener" asp-action="MaakAccount" asp-route-id="@item.AanmeldingId">Maak Account</a>
+                <a asp-controller="Aanmelding" asp-action="Details" asp-route-id="@item.AanmeldingId">Bekijk</a>
             </td>
         </tr>
 }
