--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -58,6 +58,12 @@
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="PriveChat" asp-action="Index">Chats</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Hulpverlener" asp-action="Clienten">Clienten</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Hulpverlener" asp-action="Aanmelding">Aanmelding</a>
+                            </li>
                              <partial name="_LoginPartial"></partial>
                         }
                         else
