Client joined nu automatisch een groep

--- a/src/Views/GroepsChat/Chat.cshtml
+++ b/src/Views/GroepsChat/Chat.cshtml
@@ -8,6 +8,7 @@
             <div class="col-4"><input type="hidden" for="chattid" id="chattid" value=0></div>
             <div class="col-4"><input type="hidden" for="groepnaam" id="groepnaam" value="@ViewBag.gp"></div>
             <div class="col-4"><input type="hidden" for="chattype" id="chattype" value=groepschat></div>
+            <div class="col-4"><input type="hidden" for="InGroep" id="InGroep" value="@ViewBag.InGroep"></div>
         </div>
         <div class="row">
             <div class="col-2">Message</div>
