Verzender slaat goed op

--- a/src/Views/GroepsChat/Chat.cshtml
+++ b/src/Views/GroepsChat/Chat.cshtml
@@ -10,7 +10,28 @@
             <div class="col-4"><input type="hidden" for="chattype" id="chattype" value=groepschat></div>
             <div class="col-4"><input type="hidden" for="InGroep" id="InGroep" value="@ViewBag.InGroep"></div>
         </div>
-        <div class="row">
+
+    <h2>Hulpgroep: @ViewBag.gp</h2>
+
+    <div class="row">
+        <div class="col-12">
+            <hr />
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-6">
+            <ul id="messagesList"></ul>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <hr />
+        </div>
+    </div>
+
+            <div class="row">
             <div class="col-2">Message</div>
             <div class="col-4"><input type="text" id="messageInput" /></div>
         </div>
@@ -18,20 +39,11 @@
         <div class="row">
             <div class="col-6">
                 <input type="button" id="sendButton" value="Send Message" onclick= "sendGroupMessage()" />
-                <input type="button" id="@ViewBag.gp" value="Join Ali" onclick= "JoinGroep(this)" />
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-12">
-            <hr />
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-6">
-            <ul id="messagesList"></ul>
-        </div>
-    </div>
+
+
     @ViewBag.Account
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/chat.js"></script>
