--- a/src/Views/GroepsChat/Chat.cshtml
+++ b/src/Views/GroepsChat/Chat.cshtml
@@ -9,6 +9,7 @@
             <div class="col-4"><input type="hidden" for="groepnaam" id="groepnaam" value="@ViewBag.gp"></div>
             <div class="col-4"><input type="hidden" for="chattype" id="chattype" value=groepschat></div>
             <div class="col-4"><input type="hidden" for="InGroep" id="InGroep" value="@ViewBag.InGroep"></div>
+            <div class="col-4"><input type="hidden" for="naam" id="naam" value="@ViewBag.naam"></div>
         </div>
 
     <h2>Hulpgroep: @ViewBag.gp</h2>
