--- a/src/Views/PriveChat/Chat.cshtml
+++ b/src/Views/PriveChat/Chat.cshtml
@@ -6,6 +6,7 @@
             <div class="col-4"><input type="hidden" for="chattid" id="chattid" value=@ViewBag.chattid></div>
             <div class="col-4"><input type="hidden" for="verstuurder" id="verstuurder" value=@ViewBag.verstuurder></div>
             <div class="col-4"><input type="hidden" for="chattype" id="chattype" value=privechat></div>
+            <div class="col-4"><input type="hidden" for="naam" id="naam" value="@ViewBag.naam"></div>
         </div>
 
         <div class="row">
@@ -39,6 +40,5 @@
         </div>
 
     </div>
-    @ViewBag.Account
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/chat.js"></script>
