--- a/src/Views/Home/Ricco.cshtml
+++ b/src/Views/Home/Ricco.cshtml
@@ -5,7 +5,7 @@
 <section id="aboutmeWrapper">
     <div class="container">
         <div class="row mb-4">
-            <img src="~/img/op-1.png" alt="foto van Ricco" class="rounded img-fluid">
+            <img src="~/img/Ricco.png" alt="foto van Ricco" class="rounded img-fluid">
         </div>
         <div class="row">
             <h1>Ricco</h1>
