--- a/src/Views/GroepsChat/Index.cshtml
+++ b/src/Views/GroepsChat/Index.cshtml
@@ -4,11 +4,17 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Zelfhulp groepen</h1>
 
-<p>
+@{
+    if(ViewBag.hulpverlener){
+        <p>
     <a asp-action="Create">Create New</a>
-</p>
+    </p>
+    }
+}
+
+
 <table class="table">
     <thead>
         <tr>
