--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -47,6 +47,13 @@
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="PriveChat" asp-action="Chat">Chat</a>
                             </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="GroepsChat" asp-action="Index">Open Groepen</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="GroepsChat" asp-action="MijnChats">Mijn Zelfhulp Groepen</a>
+                            </li>
                              <partial name="_LoginPartial"></partial>
                         }
 
@@ -63,6 +70,9 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Hulpverlener" asp-action="Aanmelding">Aanmelding</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="GroepsChat" asp-action="Index">Zelfhulp Groepen</a>
                             </li>
                              <partial name="_LoginPartial"></partial>
                         }
