--- a/src/Views/Aanmelding/Create.cshtml
+++ b/src/Views/Aanmelding/Create.cshtml
@@ -145,7 +145,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12 justify-content-end d-flex">
-                                <input type="submit" onclick="send()" value="Create" class="btn btn-secondary" />
+                                <input type="submit" onclick="send()" value="Create" aria-label="Aanmelding versturen" class="btn btn-secondary" />
                             </div>
                         </div>
                     </div>
