--- a/src/Views/Client/Woonplaats.cshtml
+++ b/src/Views/Client/Woonplaats.cshtml
@@ -33,6 +33,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" aria-label="terug" >Back to List</a>
 </div>
 
