--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 @inject SignInManager<ApplicatieGebruiker> SignInManager
 @inject UserManager<ApplicatieGebruiker> UserManager
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -23,62 +23,56 @@
                 </button>
                 <div class="navbar-collapse collapse">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-label="Homepagina" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
                         @if(SignInManager.IsSignedIn(User) && User.IsInRole("Moderator"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                <a class="nav-link" aria-label="alle hulpverleners" asp-controller="Moderator" asp-action="Hulpverlener">Hulpverleners</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Moderator" asp-action="Hulpverlener">Hulpverleners</a>
+                                <a class="nav-link" aria-label="alle clienten" asp-controller="Moderator" asp-action="Client">Clienten</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Moderator" asp-action="Client">Clienten</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Moderator" asp-action="Melding">Melding</a>
+                                <a class="nav-link" aria-label="chat meldingen" asp-controller="Moderator" asp-action="Melding">Melding</a>
                             </li>
                              <partial name="_LoginPartial"></partial>
                         }
                         else if(SignInManager.IsSignedIn(User) && User.IsInRole("Client"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                <a class="nav-link" aria-label="Wijzig woonplaats" asp-controller="Client" asp-action="Woonplaats">Chat</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="PriveChat" asp-action="Chat">Chat</a>
-                            </li>
-                             <partial name="_LoginPartial"></partial>
+                                <a class="nav-link" aria-label="Privechat met jouw orthopedagoog" asp-controller="PriveChat" asp-action="Chat">Chat</a>
+                            </li>                             
+                            <partial name="_LoginPartial"></partial>
                         }
 
                         else if(SignInManager.IsSignedIn(User) && User.IsInRole("Hulpverlener"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                <a class="nav-link" aria-label="Jou privechats" asp-controller="PriveChat" asp-action="Index">Chats</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="PriveChat" asp-action="Index">Chats</a>
+                                <a class="nav-link"aria-label="Jou clienten" asp-controller="Hulpverlener" asp-action="Clienten">Clienten</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Hulpverlener" asp-action="Clienten">Clienten</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Hulpverlener" asp-action="Aanmelding">Aanmelding</a>
+                                <a class="nav-link" aria-label="Jou aanmeldingen" asp-controller="Hulpverlener" asp-action="Aanmelding">Aanmelding</a>
                             </li>
                              <partial name="_LoginPartial"></partial>
                         }
                         else
                         {
                             <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                <a class="nav-link" aria-label="Aanmelden voor een afspraak" asp-controller="Aanmelding" asp-action="Create">Aanmelden</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Aanmelding" asp-action="Create">Aanmelden</a>
+                                <a class="nav-link" aria-label="Orthopedagogen bekijken" asp-controller="Home" asp-action="Orthopedagogen">Orthopedagogen</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Orthopedagogen">Orthopedagogen</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="OverOns">Over ons</a>
+                                <a class="nav-link" aria-label="Over ons" asp-controller="Home" asp-action="OverOns">Over ons</a>
                             </li>
                             <partial name="_LoginPartial"></partial>
                         }
