--- a/src/Views/Shared/_LoginPartial.cshtml
+++ b/src/Views/Shared/_LoginPartial.cshtml
@@ -6,20 +6,20 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a id="manage" class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+        <a id="manage" class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" aria-label="Wijzig Eigen Gegevens" title="Manage">Hello @UserManager.GetUserName(User)!</a>
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link">Logout</button>
+            <button id="logout" type="submit" aria-label="logout" class="nav-link btn btn-link">Logout</button>
         </form>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link" id="register" asp-area="Identity" asp-page="/Account/Register">Registreer</a>
+        <a class="nav-link" id="register" asp-area="Identity" aria-label="Registreer" asp-page="/Account/Register">Registreer</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav-link" id="login" asp-area="Identity" aria-label="Login" asp-page="/Account/Login">Login</a>
     </li>
 }
