--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                         else if(SignInManager.IsSignedIn(User) && User.IsInRole("Client"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link" aria-label="Wijzig woonplaats" asp-controller="Client" asp-action="Woonplaats">Chat</a>
+                                <a class="nav-link" aria-label="Wijzig woonplaats" asp-controller="Client" asp-action="Woonplaats">Woonplaats</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" aria-label="Privechat met jouw orthopedagoog" asp-controller="PriveChat" asp-action="Chat">Chat</a>
@@ -60,6 +60,13 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" aria-label="Jou aanmeldingen" asp-controller="Hulpverlener" asp-action="Aanmelding">Aanmelding</a>
+                            </li>
+                             <partial name="_LoginPartial"></partial>
+                        }
+                        else if(SignInManager.IsSignedIn(User) && User.IsInRole("Voogd"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" aria-label="uw kind" asp-controller="Voogd" asp-action="Index">Client</a>
                             </li>
                              <partial name="_LoginPartial"></partial>
                         }
