--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -83,6 +83,9 @@
                             </li>
                             <partial name="_LoginPartial"></partial>
                         }
+                        <li class="nav-item">
+                            <a class="nav-link" aria-label="Veel gestelde vragen" asp-controller="Home" asp-action="FAQ">FAQ</a>
+                        </li>
                     </ul>
                 </div>
             </div>
