--- a/src/Views/GroepsChat/Index.cshtml
+++ b/src/Views/GroepsChat/Index.cshtml
@@ -15,6 +15,13 @@
 }
 
 
+    <form action="/GroepsChat" method="post">
+        <input type="text" name = "onderwerp" id="onderwerp" label = "Onderwerp" placeholder="Onderwerp" value="@ViewBag.onderwerp">
+        <input type="text" name = "leeftijd" id="leeftijd" label = "Leeftijd" placeholder="Leeftijd" value="@ViewBag.leeftijd">
+        <button type="submit" class="btn btn-primary">Zoek</button>
+    </form>
+
+
 <table class="table">
     <thead>
         <tr>
