--- a/src/Views/GroepsChat/Chat.cshtml
+++ b/src/Views/GroepsChat/Chat.cshtml
@@ -10,6 +10,7 @@
             <div class="col-4"><input type="hidden" for="chattype" id="chattype" value=groepschat></div>
             <div class="col-4"><input type="hidden" for="InGroep" id="InGroep" value="@ViewBag.InGroep"></div>
             <div class="col-4"><input type="hidden" for="naam" id="naam" value="@ViewBag.naam"></div>
+            <div class="col-4"><input type="hidden" for="@ViewBag.magchatten" id="magchatten" value="@ViewBag.magchatten"></div>
         </div>
 
     <h2>Hulpgroep: @ViewBag.gp</h2>
