--- a/src/Views/PriveChat/Chat.cshtml
+++ b/src/Views/PriveChat/Chat.cshtml
@@ -7,6 +7,7 @@
             <div class="col-4"><input type="hidden" for="verstuurder" id="verstuurder" value=@ViewBag.verstuurder></div>
             <div class="col-4"><input type="hidden" for="chattype" id="chattype" value=privechat></div>
             <div class="col-4"><input type="hidden" for="naam" id="naam" value="@ViewBag.naam"></div>
+            <div class="col-4"><input type="hidden" for="magchatten" id="magchatten" value="ja"></div>
         </div>
 
         <div class="row">
