--- a/src/Views/Home/FAQ.cshtml
+++ b/src/Views/Home/FAQ.cshtml
@@ -68,7 +68,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Heeft u een klacht?</h5>
                     <p class="card-text">
-                        Klik op deze <a aria-label="Veel gestelde vragen" asp-controller="Home" asp-action="klacht">link</a> om naar de klachtenpagina te gaan.
+                        Klik op deze <a aria-label="Klacht indienen" asp-controller="Home" asp-action="klacht">link</a> om naar de klachtenpagina te gaan.
                     </p>
                 </div>
             </div>
