--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -47,7 +47,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" aria-label="Privechat met jouw orthopedagoog" asp-controller="PriveChat" asp-action="Chat">Chat</a>
                             </li>
-                            
+                            <li class="nav-item">
+                                <a class="nav-link" aria-label="Mijn Dossier" asp-controller="Client" asp-action="Dossier">Mijn Dossier</a>
+                            </li>    
                             <li class="nav-item">
                                 <a class="nav-link" aria-label="Open zelfhulp groepen" asp-controller="GroepsChat" asp-action="Index">Open Groepen</a>
                             </li>
