--- a/src/Views/Home/Aanmelden.cshtml
+++ b/src/Views/Home/Aanmelden.cshtml
@@ -10,9 +10,8 @@
 
 <section id="signupWrapper">
     <div class="container">
-        <div class="row">
-            <h1>Gelukt</h1><br/>
-            <p>Uw aanmelding is verzonden naar de orthopedagoog.</p>
+        <div class="row ">
+            <h1>Geslaagd! Uw aanmelding is verzonden naar de orthopedagoog.</h1>
         </div>
     </div>
 </section>
