--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="mb-4">
-        <nav class="navbar navbar-expand-md navbar-toggleable-sm">
+        <nav class="navbar navbar-expand-lg navbar-toggleable-lg">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <img src="https://logojinni.com/image/logos/slack-463.svg" width="75" height="75" alt="logo">
