--- a/src/Views/Shared/_LoginPartial.cshtml
+++ b/src/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,7 @@
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" aria-label="logout" class="nav-link btn btn-link">Logout</button>
+            <button id="logout" type="submit" aria-label="Uitloggen" class="nav-link">Uitloggen</button>
         </form>
     </li>
 }
