tekst groter/kleiner knop

--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -99,6 +99,12 @@
                         <li class="nav-item">
                             <a class="nav-link" aria-label="Veel gestelde vragen" asp-controller="Home" asp-action="FAQ">FAQ</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-label="Veel gestelde vragen" onclick="fontSizeLg()">Tekst groter</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-label="Veel gestelde vragen" onclick="fontSizeMd()">Tekst kleiner</a>
+                        </li>
                     </ul>
                 </div>
             </div>
