--- a/src/Views/Home/Harold.cshtml
+++ b/src/Views/Home/Harold.cshtml
@@ -5,7 +5,7 @@
 <section id="aboutmeWrapper">
     <div class="container">
         <div class="row mb-4">
-            <img src="~/img/Hareld.png" alt="foto van Harold" class="rounded img-fluid">
+            <img src="~/img/Harold.png" alt="foto van Harold" class="rounded img-fluid">
         </div>
         <div class="row">
             <h1>Harold</h1>
