--- a/src/Views/Aanmelding/Create.cshtml
+++ b/src/Views/Aanmelding/Create.cshtml
@@ -17,7 +17,7 @@
 <section id="signupWrapper">
     <div class="container">
         <div class="row">
-            <h1>Meld uw hier aan.</h1>
+            <h1>Meld u hier aan.</h1>
         </div>
         <div class="row justify-content-center">
             <div class="form-box col-12">
