--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -122,7 +122,7 @@
                     <h3>De praktijk</h3>
                     <ul>
                         <li><a href="tel:+31612345678">+31612345678</a></li>
-                        <li><a asp-action="Index">Contact</a></li>
+                        <li><a href="mailto:praktijk@zmdh.nl">praktijk@zmdh.nl</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
@@ -138,7 +138,6 @@
                     <h3>Privacy</h3>
                     <ul>
                         <li><a asp-action="Privacy">Privacyverklaring</a></li>
-                        <li>Privacybeleid</li>
                     </ul>
                 </div>
             </div>
