--- a/src/Areas/Identity/Pages/Account/Login.cshtml
+++ b/src/Areas/Identity/Pages/Account/Login.cshtml
@@ -18,7 +18,7 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Password"></label>
+                <label asp-for="Input.Password">Wachtwoord</label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
@@ -26,23 +26,12 @@
                 <div class="checkbox">
                     <label asp-for="Input.RememberMe">
                         <input asp-for="Input.RememberMe" />
-                        @Html.DisplayNameFor(m => m.Input.RememberMe)
+                         Onthoud mij
                     </label>
                 </div>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary">Log in</button>
-            </div>
-            <div class="form-group">
-                <p>
-                    <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                </p>
-                <p>
-                    <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                </p>
-                <p>
-                    <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                </p>
             </div>
         </form>
     </section>
