--- a/src/Views/Shared/_LoginPartial.cshtml
+++ b/src/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,7 @@
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" aria-label="Uitloggen" class="btn nav-link">Uitloggen</button>
+            <button id="logout" type="submit" aria-label="Uitloggen" class="btn text-white">Uitloggen</button>
         </form>
     </li>
 }
