--- a/src/Views/Home/Index.cshtml
+++ b/src/Views/Home/Index.cshtml
@@ -18,6 +18,10 @@
                             Deze stoornissen kunnen bijvoorbeeld ADHD, Eetstoornis, Dyslexie, etc. zijn. 
                             Ons team bestaat uit orthopedagogen met veel werk ervering en iedereen heeft zijn eigen specialisatie. 
                         </p>
+                        <p class="card-text">
+                            Wij werken met een online platform waar de jongeren, die in behandeling zijn, met elkaar kunnen chatten. 
+                            Daarbij wordt de privacy van de gebruiker optimaal gewaarborgd en kunnen de jongeren praten met andere jongeren die een soort gelijke situatie hebben.
+                        </p>
                     </div>
                 </div>
             </div>
