--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -137,7 +137,7 @@
                 <div class="col-md-4">
                     <h3>Privacy</h3>
                     <ul>
-                        <li><a aria-label="Link naar privacyverklaring" asp-action="Privacy">Privacyverklaring</a></li>
+                        <li><a aria-label="Link naar privacyverklaring" asp-controller="Home" asp-action="Privacy">Privacyverklaring</a></li>
                     </ul>
                 </div>
             </div>
