--- a/src/Views/Home/FAQ.cshtml
+++ b/src/Views/Home/FAQ.cshtml
@@ -66,6 +66,47 @@
         <div class="col-12">
             <div class="card">
                 <div class="card-body">
+                    <h5 class="card-title">Chatten met de hulpverlener</h5>
+                    <p class="card-text">
+                        Bij ons kun je chatten met de hulpverlener, je ouder/voogd heeft geen toegang tot deze chat. Als je jonger bent dan 16 jaar, dan kan je ouder/voogd wel zien of je chat met de verzorger en zo ja hoe vaak (per dag/week). Je ouder/voogd heeft dus geen toegang tot de inhoud van de chat. 
+                    </p>
+                    <h6 class="card-title">Houd het leuk</h6>
+                    <p class="card-text">
+                        Het is natuurlijk niet de bedoeling dat de chat misbruikt wordt Als het nodig is kan een moderator de chat verwijderen. 
+                    </p>
+                </div>
+            </div>
+        </div>
+        </div>
+
+        <div class="row mb-4">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Deelnemen aan de groepschat</h5>
+                    <p class="card-text">
+                        Je wilt je inschrijven voor een groepschat. Spannend natuurlijk voor de eerste keer. Gelukkig is er weinig om zorgen over te maken. Deelnemen aan een groepschat is heel makkelijk.  
+                    </p>
+                    <p class="card-text">                   
+                        Op de site zie je een lijst staan met verschillende zogenaamde zelfhulpgroepen. Deze groepen hebben een aantal tijdsloten waar je je voor kan inschrijven. Tijdens een tijdslot houdt een hulpverlener de chat in de gaten terwijl de deelnemers met elkaar en de hulpverlener in gesprek kunnen gaan. Niet alle zelfhulpgroepen zijn hetzelfde. Op de site zie je groepen staan met andere onderwerpen en leeftijdsgroep. Ook zie je hoeveel mensen aan een zelfhulpgroep meedoen. Hierdoor kan je een chat kiezen die bij jouw onderwerp en leeftijd past. 
+                    </p>
+                    <h6 class="card-title">Vraag om toestemming</h6>
+                    <p class="card-text">
+                        Ben je jonger dan 16 jaar? Dan moet je samen met je ouders of verzorgers een toestemmingsronde voordat je mee kan doen. Als je ouder bent dan 16 jaar dan heb je geen toestemming nodig. 
+                    </p>
+                    <h6 class="card-title">Pesten wordt niet getolereerd</h6>
+                    <p class="card-text">
+                        Het is natuurlijk niet de bedoeling om te gaan pesten of te bedreigen. Als een hulpverlener merkt dat er in de chat gepest wordt of er zijn te veel meldingen. Dan kan er een moderator ingrijpen. Als het nodig is kan een moderator de boosdoener wegsturen uit de chat. Als jij last hebt van pesten of bedreigingen tijdens het chatten, kan je in de chat ook een melding anoniem sturen naar de hulpverlener. 
+                    </p>
+                </div>
+            </div>
+        </div>
+        </div>
+
+        <div class="row mb-4">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-body">
                     <h5 class="card-title">Heeft u een klacht?</h5>
                     <p class="card-text">
                         Klik op deze <a aria-label="Klacht indienen" asp-controller="Home" asp-action="klacht">link</a> om naar de klachtenpagina te gaan.
